blocks/header/header.css
.header-wrapper {
  display: flex;
  justify-content: center;

  --menu-animation: right 450ms ease-in-out;
  --header-animation: transform 300ms ease-in-out;
  --actions-links-height-mobile: 102px;
}

@media (prefers-reduced-motion) {
  .header-wrapper {
    --menu-animation: right 0 ease-in-out;
    --header-animation: transform 0 ease-in-out;
  }
}

.header {
  width: 100%;
  display: flex;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  transition: var(--header-animation);
  padding: 0 16px;
}

.header__nav {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.header__menu-overlay {
  display: none;
}

.header__logo-image {
  width: 98px;
  display: block;
}

.header__logo-image.icon svg {
  width: 100%;
}

.header__close-menu {
  padding: 0;
  background: transparent;
  border: unset;
  display: flex;
  align-items: center;
  position: absolute;
  margin-top: 16px;
  right: 16px;
  height: 24px;
}

.header__main-nav {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  gap: 0;
  width: 100%;
}

.header__main-nav-item {
  border-bottom: solid 1px var(--c-grey-300);
  padding: 5px 0;
  margin: 0 16px;
}

.header__main-nav-link {
  padding: 12px 0;
  border-bottom: solid 2px transparent;
  justify-content: space-between;
}

.header__main-nav-link::after {
  content: '';
  background-image: url('/icons/chevron-down.svg');
  width: 24px;
  height: 24px;
  background-repeat: no-repeat;
}

.header__main-nav-link--collapsed::after {
  transform: rotate(-90deg);
}

.header__link:any-link {
  display: flex;
  align-items: center;
  gap: 4px;
  color: var(--c-grey-4);
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: var(--ff-volvo-novum);
  font-size: 14px;
  line-height: var(--f-body-line-height);
  letter-spacing: var(--f-body-letter-spacing);
  border-bottom: solid 2px transparent;
  padding: 12px 0;
}

.header--hamburger-open .header__link:hover,
.header--hamburger-open .header__link:focus,
.header--hamburger-open .header__link:active {
  border-bottom: solid 2px transparent;
}

.header__link:any-link:active {
  color: var(--c-main-black);
}

.header__link .icon,
.header__link .icon svg {
  height: 24px;
  width: auto;
}

.header__actions {
  display: flex;
  gap: 24px;
}

.header__actions-list,
.header__main-links {
  display: flex;
  transition: var(--menu-animation);
  right: max(-375px, -95vw);
  position: absolute;
  width: 95vw;
  max-width: 375px;
  background: var(--c-white);
}

.header__actions-list {
  list-style: none;
  margin: 0;
  gap: 24px;
  top: 0;
  padding: 16px;
  height: var(--actions-links-height-mobile);
}

.header__actions-list::after {
  content: '';
  border-bottom: solid 1px var(--c-grey-300);
  position: absolute;
  bottom: 0;
  width: calc(100% - 32px);
}

.header__action-link.header__hamburger-menu {
  padding: 0;
  margin: 0;
  background: inherit;
  border: none;
  justify-content: center;
}

.header__main-links {
  top: var(--actions-links-height-mobile);
  padding: 0;
  height: calc(100vh - var(--actions-links-height-mobile));
}

.header__action-link {
  display: flex;
  flex-direction: column;
}

.header__action-link-text {
  font-size: 12px;
  letter-spacing: var(--f-caption-letter-spacing);
  line-height: var(--f-caption-line-height);
}

.header__mobile-actions {
  display: flex;
  gap: 16px;
}

.header--hamburger-open .header__menu-overlay {
  position: fixed;
  top: 0;
  left: 0;
  background: rgb(20 20 20 / 40%);
  width: 100vw;
  height: 100vh;
  display: block;
}

.header--hamburger-open .header__actions-list {
  right: 0;
  overflow: auto;
}

.header--hamburger-open .header__action-link-text {
  display: inline;
}

.header--hamburger-open .header__main-links {
  right: 0;
}

.header--hidden {
  transform: translateY(-100%);
}

@media (min-width: 744px) {
  .header {
    padding: 0 32px;
  }
}

@media (min-width: 1200px) {
  .header {
    width: 100%;
    justify-content: center;
  }

  .header__nav {
    max-width: var(--wrapper-width);
  }

  .header__link:hover,
  .header__link:focus {
    border-bottom: solid 2px var(--c-grey-4);
  }

  .header__link:any-link:active {
    border-bottom: solid 2px var(--c-main-black);
  }

  .header__action-link.header__hamburger-menu {
    display: none;
  }

  .header__actions-list {
    border: unset;
    padding: 0;
    position: static;
    width: auto;
    height: auto;
  }

  .header__actions-list::after {
    display: none;
  }

  .header__main-links {
    height: auto;
    position: static;
    padding: 0 16px;
    width: auto;
    max-width: unset;
  }

  .header__main-nav-link::after {
    display: none;
  }

  .header__main-nav {
    flex-direction: row;
    justify-content: space-between;
    gap: 32px;
    width: auto;
  }

  .header__main-nav-item {
    border-bottom: unset;
    padding: 0;
  }

  .header__action-link {
    flex-direction: row;
  }

  .header__action-link-text {
    display: inline;
  }

  .icon.icon-user + .header__action-link-text {
    display: none;
  }

  .header__action-item--close-menu,
  .header__close-menu {
    display: none;
  }
}

